argocd-repo/apps/mlflow/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  labels:
    app: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
        - image: justingodden/mlflow
          name: mlflow
          args:
            - "--host"
            - "0.0.0.0"
            - "--port"
            - "5000"
            - "--artifacts-destination"
            - "s3://mlflow"
            - "--backend-store-uri"
            - "postgresql://postgres:password@postgresql.postgresql.svc.cluster.local:5432/mlflow"
          resources:
            requests:
              memory: "10Mi"
              cpu: "32m"
            limits:
              memory: "128Mi"
              cpu: "500m"
